--- a/app/views/basket_case/index.html.erb
+++ b/app/views/basket_case/index.html.erb
@@ -5,7 +5,5 @@
 <%= link_to "Order by Amount - #{@order}", "#", class: "button"%>
 
 <div class="container">
-<%- @list_items.each do |fruit, amount| %>
-  <p><%= fruit %> : <%= amount %></p>
-<% end %>
+  <%= render 'list_items', list_items: @list_items %>
 </div>
