--- a/app/views/basket_case/index.html.erb
+++ b/app/views/basket_case/index.html.erb
@@ -1,11 +1,9 @@
 <h1>Fruit Basket</h1>
 <span class="data">raw data: <%= @fruits %></span>
 <br />
-<%= link_to "Order by Name - #{@order}", basket_case_order_by_fruit_path(order: @order), class: "button"%>
-<%= link_to "Order by Amount - #{@order}", "#", class: "button"%>
+<%= link_to "Order by Name - #{order.upcase}", basket_case_order_by_fruit_path(order: order), class: "button" %>
+<%= link_to "Order by Amount - #{order.upcase}", basket_case_order_by_amount_path(order: order), class: "button" %>
 
-<div class="container">
-<%- @list_items.each do |fruit, amount| %>
-  <p><%= fruit %> : <%= amount %></p>
-<% end %>
+<div id="fruit_container" class="container">
+  <%= render partial: 'list_items', local: { list_items: list_items } %>
 </div>
